# sea-mile

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  refresh-bundled-data.yml  release.yml
docs/: API_COMPATIBILITY.md  DATA_DICTIONARY.md  LIBRARY_API.md  MIGRATION.md  OUTPUT_SCHEMAS.md  PERFORMANCE.md  SOURCES_AND_LIMITATIONS.md  STABILITY.md
docs/schemas/: cli-output-1.schema.json  envelope-1.schema.json
examples/synthetic/: README.md  index.html
scripts/: benchmark.py  build_bundled_registry.py  build_synthetic_demo.py
src/sea_mile/: __init__.py  _routing_backend.py  canonical.py  cli.py  exceptions.py  geo.py  geonames.py  matching.py  normalization.py  osm.py  ports.py  quality.py  reference.py  registry_build.py  router.py  routing.py  source_data.py  text.py  tui.py  validation.py
src/sea_mile/data/: ATTRIBUTION.md  port_aliases.parquet  port_registry.parquet  registry_manifest.json
src/sea_mile/sources/: __init__.py  geonames.py  reference.py
tests/: test_benchmark.py  test_cli.py  test_docs_current.py  test_geonames.py  test_golden.py  test_json_schema.py  test_matching.py  test_normalization.py  test_osm.py  test_ports.py  test_properties.py  test_public_api.py  test_quality.py  test_reference.py  test_registry_build.py  test_registry_schema.py  test_route_regression.py  test_router_public.py  test_routing.py  test_routing_backend.py  test_scenarios.py  test_serialization.py  test_source_data.py  test_source_lock.py  test_source_parsers.py  test_tui.py  test_validation.py
tests/golden/: aliases.csv  cases.csv  registry.csv
