[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sea-mile"
version = "0.1.0"
description = "Local port search and approximate sea-route distance library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "frogiraffe" }]
keywords = ["ports", "maritime", "geospatial", "nautical-miles", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28.1",
    "pandas>=3.0.3",
    "pyarrow>=25.0.0",
    "rapidfuzz>=3.14.5",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
# Sea routing. Search, resolve, and nearest work without it.
routing = [
    "searoute>=1.6.0",
]
# pyproj powers the optional WGS84 route cross-check in `sea-mile data verify`.
# The demo builder in scripts/ needs the routing extra as well.
analysis = [
    "pyproj>=3.7.2",
]
fast = [
    "scipy>=1.16",
]
tui = [
    "textual>=0.60",
]

[project.scripts]
sea-mile = "sea_mile.cli:main"

[project.urls]
Homepage = "https://github.com/frogiraffe/sea-mile"
Repository = "https://github.com/frogiraffe/sea-mile"
Issues = "https://github.com/frogiraffe/sea-mile/issues"
Changelog = "https://github.com/frogiraffe/sea-mile/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
sea_mile = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "jsonschema>=4.0",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
check_untyped_defs = true
warn_redundant_casts = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["searoute.*", "scipy.*", "pandas.*", "pyproj.*"]
ignore_missing_imports = true
